# ans-project

./: .env.example  .gitignore  AUTHENTICATION_QUICKSTART.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  setup_ans_project.py  test-authentication.sh
backend/: .env.example  Dockerfile  README.md  alembic.ini  coverage.json  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_add_user_authentication.py  361544390a58_add_submission_claims_junction_table.py  67b2ef695615_add_workflow_transitions_audit_log.py  74a3438eeb0f_initial_schema_users_submissions_claims_.py  9dc8503f66db_update_workflow_states_to_efcsn.py  a1b2c3d4e5f6_add_rating_definitions_table.py  a2b3c4d5e6f7_add_fact_check_ratings_table.py  b3c4d5e6f7a8_add_peer_review_tables.py  c4d5e6f7a8b9_add_analytics_events_table.py  c4d5e6f7a8b9_add_corrections_tables.py  c4d5e6f7a8b9_add_sources_table.py  c4d5e6f7g8h9_add_transparency_pages_tables.py  d58eee634f3a_add_spotlight_content_table.py  d5e6f7a8b9c0_add_corrections_tables.py  e015fdaaaad0_merge_heads.py  e6f7a8b9c0d1_add_analytics_events_table.py  f65f03a3cc01_add_submission_reviewers_table.py  g7h8i9j0k1l2_add_fact_check_draft_columns.py  h8i9j0k1l2m3_add_email_infrastructure.py  i9j0k1l2m3n4_add_email_templates_table.py  j0k1l2m3n4o5_add_rtbf_requests_table.py  k1l2m3n4o5p6_add_transparency_reports_table.py  l2m3n4o5p6q7_add_transcription_fields_to_spotlight.py  m3n4o5p6q7r8_add_submitter_comment_to_submissions.py
backend/app/: main.py  main.py,cover
backend/app/api/: __init__.py,cover
backend/app/core/: __init__.py,cover  celery_app.py  config.py  config.py,cover  database.py  database.py,cover  dependencies.py  dependencies.py,cover  redis.py  security.py  security.py,cover
backend/app/db/: seed_email_templates.py
backend/app/i18n/: __init__.py  loader.py
backend/app/models/: __init__.py  __init__.py,cover  analytics_event.py  base.py  base.py,cover  claim.py  claim.py,cover  correction.py  email_log.py  email_template.py  email_template_seeds.py  fact_check.py  fact_check.py,cover  fact_check_rating.py  peer_review.py  peer_review_trigger.py  rating_definition.py  rtbf_request.py  source.py  spotlight.py  spotlight.py,cover  (+11 more)
backend/scripts/: seed_admin.py  seed_dev_data.py
(+365 files in other folders)
